--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -3,3 +3,19 @@
     flex-direction: column;
     justify-content: space-evenly;
 }
+
+@media screen and (max-width: 1200px) {
+    .dashboard {
+        justify-content:center;
+        margin-top: 2rem;
+    }
+}
+
+@media screen and (max-width: 768px)
+{
+    .dashboard{
+        
+        align-items: center;
+        justify-content: center;
+    }
+}
