--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -61,3 +61,72 @@
   .detail > span:nth-child(3) {
     font-size: 12px;
   }
+
+ /* ExpandedCard */
+/* .expanded-card {
+  position: absolute;
+  width: 60%;
+  height: 70vh;
+  z-index: 9;
+  left: 13rem;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  padding: 1rem;
+} */
+.expanded-card{
+  width: 60%;
+  
+  z-index: 20;
+}
+.expanded-card > span:nth-of-type(1) {
+  color: white;
+  font-size: 26px;
+  font-weight: bold;
+  text-shadow: 0px 0px 15px white;
+}
+.expanded-card > span:nth-of-type(2) {
+  color: rgb(236, 236, 236);
+  font-size: 15px;
+} 
+
+.chart-container {
+  width: 80%;
+}
+
+@media screen and (max-width: 1200px) {
+  .expanded-card{
+    top: 2rem;
+    width: 90vw;
+    height: 45vh;
+    left: 6rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .expanded-card {
+    top: 8rem;
+    
+    height: 50%;
+    left: 1vw;
+    width: 60%;
+    margin-right: 2vw;
+  }
+
+  .compact-card {
+  
+    width: 60%;
+  }
+
+
+.chart-container {
+  width: 90%;
+  justify-content: center;
+  align-items: center;
+ 
+  
+}
+
+}
