--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -21,8 +21,13 @@
   } */
   
   .logo > img {
-    width: 10rem;
-    height: 10rem;
+    margin-top: 4vw;
+    width: 15vw;
+   
+  }
+
+  .bars{
+    display: none;
   }
 
   /* MENU CSS */
@@ -68,11 +73,22 @@
     margin-right: calc(1rem - 8px);
   }
 
+  /* Tablets */
+@media screen and (max-width: 1200px) {
+  .menu-items>span{
+    display: none;
+  }
+  .logo{
+    display: none;
+  }
+}
+
   @media screen and (max-width: 768px) {
     .sidebar{
+      
       position: fixed;
-      z-index: 9;
-      background: #ffe0e0;
+      z-index: 21;
+      background: #f6ddc8;
       width: 55%;
       padding-right: 1rem;
       height: 100%;
@@ -90,12 +106,12 @@
     .bars{
       display: flex;
       position: fixed;
-      top: 2rem;
-      left:60%;
-      background:#ffe0e0;
+      top: 6rem;
+      left:80%;
+      background:#f6ddc8;
       padding:10px;
       border-radius: 10px;
-      z-index: 9;
+      z-index: 22;
     }
     .close{
       left: -60%;
