--- a/src/components/pages/AdminPanel/AdminPanel.css
+++ b/src/components/pages/AdminPanel/AdminPanel.css
@@ -37,7 +37,7 @@
     border-radius: 2rem;
     gap: 16px;
     grid-template-columns: 11rem auto;
-    overflow: hidden;
+    overflow:scroll;
   }
 
   @media screen and (max-width: 1200px) {
