fixed a bug on tickets

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -77,15 +77,15 @@
   padding: 1rem;
 } */
 .expanded-card{
-  width: 60%;
+  width: 80%;
   
-  z-index: 20;
+  z-index: 22;
 }
 .expanded-card > span:nth-of-type(1) {
   color: white;
   font-size: 26px;
   font-weight: bold;
-  text-shadow: 0px 0px 15px white;
+  text-shadow: 0px 0px 0px white;
 }
 .expanded-card > span:nth-of-type(2) {
   color: rgb(236, 236, 236);
@@ -93,17 +93,18 @@
 } 
 
 .chart-container {
-  width: 80%;
+  width: 90%;
+
 }
 
-@media screen and (max-width: 1200px) {
+/* @media screen and (max-width: 1200px) {
   .expanded-card{
     top: 2rem;
     width: 90vw;
     height: 45vh;
     left: 6rem;
   }
-}
+} */
 
 @media screen and (max-width: 768px) {
   .expanded-card {
